# ramifications

./: .gitignore  Presentation.md  README.md  SUPPORTED_URLS.md
backend/: pyproject.toml
backend/app/: affiliate.py  buy_signal.py  db.py  main.py  models.py  routes.py  schemas.py  scraper.py  seed_skus.py
backend/scripts/: seed_history.py
frontend/: package.json  pnpm-lock.yaml
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/components/: AlertForm.tsx  BuyButton.tsx  BuySignalCard.tsx  Header.tsx  ItemCard.tsx  OverpayCard.tsx  PriceChart.tsx  RetailerBadge.tsx  SparkLine.tsx  TrackForm.tsx
frontend/app/lib/: api.ts  format.ts  mock-data.ts  types.ts
